risolti i problemi di connettività, modificato il funzionamento del joystick per mimicare il vunzionamento delle freccie